# kotoba

./: .gitignore  .gitrepo  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deps.toml
.cargo/: config.toml
crates/kotoba-auth/: Cargo.toml
crates/kotoba-auth/src/: cacao.rs  delegation.rs  did_document.rs  did_key.rs  eth.rs  lib.rs  passkey.rs  resolver.rs
crates/kotoba-cli/: Cargo.toml  build.rs
crates/kotoba-cli/src/: main.rs
crates/kotoba-core/: Cargo.toml
crates/kotoba-core/src/: async_store.rs  cid.rs  foreign.rs  frame.rs  lib.rs  named_graph.rs  policy.rs  prolly.rs  store.rs
crates/kotoba-crypto/: Cargo.toml
crates/kotoba-crypto/src/: aead.rs  agent_crypto.rs  envelope.rs  hkdf.rs  hpke.rs  key_wrap.rs  lib.rs
crates/kotoba-datomic/: Cargo.toml
crates/kotoba-datomic/src/: distributed.rs  lib.rs
crates/kotoba-dht/: Cargo.toml
crates/kotoba-dht/src/: availability_proof.rs  gossip.rs  lib.rs  neighborhood.rs  node_id.rs  source_chain.rs  warrant.rs
crates/kotoba-didcomm/: Cargo.toml
crates/kotoba-didcomm/src/: lib.rs
crates/kotoba-edn/: Cargo.toml
crates/kotoba-edn/src/: lib.rs  parser.rs  value.rs  writer.rs
crates/kotoba-graph/: Cargo.toml
crates/kotoba-graph/benches/: quad_store.rs
crates/kotoba-graph/examples/: ipfs_e2e.rs  loadtest.rs
crates/kotoba-graph/src/: atproto.rs  commit.rs  jetstream.rs  lib.rs  quad_store.rs  sparql.rs  subscribe_repos.rs
crates/kotoba-guest/src/: lib.rs
crates/kotoba-ingest/: Cargo.toml
crates/kotoba-ingest/examples/: cc_ingest.rs
crates/kotoba-ingest/src/: cc.rs  embed_client.rs  gmail.rs  ingest.rs  ivf.rs  lib.rs
crates/kotoba-ipfs/: Cargo.toml
crates/kotoba-ipfs/src/: cid.rs  ipns.rs  lib.rs  node.rs  store.rs
crates/kotoba-ipfs/tests/: kubo_interop.rs  two_node.rs
crates/kotoba-kqe/: Cargo.toml
crates/kotoba-kqe/benches/: arrangement.rs
crates/kotoba-kqe/src/: arrangement.rs  citation.rs  cypher.rs  datalog.rs  datom.rs  delta.rs  lib.rs  mv.rs  quad.rs  schema.rs  sql.rs
crates/kotoba-kqe/src/enterprise/: bigquery.rs  db2.rs  hana.rs  hiveql.rs  mdx.rs  mod.rs  oracle.rs  presto.rs  snowflake.rs  sql_base.rs  teradata.rs  tsql.rs
crates/kotoba-kse/: Cargo.toml
crates/kotoba-kse/src/: agent_identity.rs  chunker.rs  journal.rs  keychain.rs  lib.rs  pre_key_registry.rs  secure_vault.rs  shelf.rs  sovereign_key.rs  store.rs  sync_window.rs  topic.rs  vault.rs
crates/kotoba-llm/: Cargo.toml
crates/kotoba-llm/src/: embed.rs  gemma.rs  gpu_common.rs  http_infer.rs  infer.rs  infer_gpu.rs  kvcache.rs  lib.rs  lora.rs  train.rs  train_gpu.rs  weight.rs
crates/kotoba-net/: Cargo.toml
crates/kotoba-net/src/: behaviour.rs  bitswap.rs  gossipsub.rs  lib.rs  pregel_msg.rs  protocol.rs  swarm.rs  transport.rs
crates/kotoba-net/tests/: swarm_gossip_test.rs
crates/kotoba-runtime/: Cargo.toml
crates/kotoba-runtime/src/: error.rs  executor.rs  host.rs  lib.rs  program.rs  sdk.rs  udf.rs
crates/kotoba-runtime/tests/: runtime_test.rs
crates/kotoba-runtime/wit/: world.wit
crates/kotoba-server/: Cargo.toml
crates/kotoba-server/src/: attestation.rs  cc_xrpc.rs  email_xrpc.rs  fingerprint.rs  graph_auth.rs  kg.rs  kotobase_xrpc.rs  lib.rs  main.rs  mcp.rs  net_actor.rs  nonce_store.rs  pre_proxy.rs  server.rs  signal_xrpc.rs  xrpc.rs
crates/kotoba-server/tests/: e2e_distributed_test.rs  e2e_test.rs
crates/kotoba-signal/src/: group.rs  identity.rs  lib.rs  message.rs  prekey.rs  ratchet.rs  session.rs  store.rs  x3dh.rs
crates/kotoba-signal/tests/: signal_e2e_test.rs
crates/kotoba-store/: Cargo.toml
crates/kotoba-store-web/src/: lib.rs
crates/kotoba-store-web/tests/: idb_e2e.rs
crates/kotoba-store/benches/: car_flush.rs  tiered_store.rs
crates/kotoba-store/src/: block_store.rs  budgeted_store.rs  capturing_store.rs  car_bundle.rs  distributed_store.rs  ipfs_pin.rs  kubo_store.rs  layered_store.rs  lib.rs  memory_store.rs  sled_store.rs  tiered_store.rs
crates/kotoba-vc/: Cargo.toml
crates/kotoba-vc/src/: lib.rs
crates/kotoba-vm/: Cargo.toml
crates/kotoba-vm/src/: agent.rs  auth_actor.rs  distributed.rs  executor.rs  foreign.rs  lib.rs  pregel.rs  router.rs  state_graph.rs  wasm_pregel.rs
crates/kotoba-vm/tests/: distributed_cross_node_test.rs
crates/netwatch-fix-02/src/: ip_family.rs
deploy/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
examples/: Cargo.toml
examples/ashiba-bmc/: Cargo.toml
examples/ashiba-bmc/src/: main.rs
examples/gftdcojp-chargespot-bma/src/: main.rs
examples/gftdcojp-chargespot-ingest/src/: main.rs
examples/kotoba-hello/: Cargo.toml
examples/kotoba-hello/src/: lib.rs
examples/kotoba-langgraph-hello/: agent.py  aria_kotoba.py
lexicons/ai/gftd/apps/kotoba/atproto/repo/: write.json
lexicons/ai/gftd/apps/kotoba/attest/: challenge.json  claim.json  query.json
lexicons/ai/gftd/apps/kotoba/block/: get.json  put.json
lexicons/ai/gftd/apps/kotoba/commit/: get.json  store.json
lexicons/ai/gftd/apps/kotoba/datomic/: asOf.json  basisT.json  datoms.json  dbStats.json  entid.json  entity.json  history.json  ident.json  indexPull.json  indexRange.json  log.json  pull.json  pullMany.json  q.json  seekDatoms.json  since.json  sync.json  transact.json  tx.json  txRange.json  with.json
lexicons/ai/gftd/apps/kotoba/did/document/: publish.json
lexicons/ai/gftd/apps/kotoba/didcomm/: send.json
lexicons/ai/gftd/apps/kotoba/graph/: query.json  sparql.json
lexicons/ai/gftd/apps/kotoba/vc/: issue.json  present.json
py/: pyproject.toml
py/kotoba_langgraph/: __init__.py  _cbor.py  _entry.py  checkpointer.py  graph.py  llm.py  messages.py
py/tests/: test_cbor.py  test_checkpointer.py  test_entry.py  test_graph.py  test_llm.py  test_messages.py
scripts/: build-pywasm.sh  deploy.sh  sync-upstream.sh
