[package]
name = "kotoba-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba content-addressed block store (memory + Kubo IPFS + tiered + IPFS pin)"

[dependencies]
kotoba-core.workspace = true
bytes.workspace  = true
serde.workspace  = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest          = { workspace = true, features = ["multipart"] }
tokio            = { workspace = true, features = ["rt"] }
sha2             = { workspace = true }
data-encoding    = "2"

[dev-dependencies]
criterion.workspace = true
tokio             = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "tiered_store"
harness = false

[[bench]]
name = "car_flush"
harness = false
