[package]
name = "kotoba-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba VM: Invoke/Result ChainEntry, CALL_FOREIGN bridge"

[dependencies]
kotoba-core.workspace = true
kotoba-kse.workspace = true
kotoba-kqe.workspace = true
kotoba-dht = { path = "../kotoba-dht" }
kotoba-auth = { path = "../kotoba-auth" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
